--- a/README.adoc
+++ b/README.adoc
@@ -13,7 +13,7 @@ To run the solution tests:
 . Run the following Cypher scripts:
 .. link:https://raw.githubusercontent.com/neo4j-graphacademy/courses/refs/heads/main/asciidoc/courses/genai-workshop-graphrag/modules/1-knowledge-graphs-vectors/lessons/3-search-vector/reset.cypher[Add plot embeddings and create the vector index^].
 .. link:https://raw.githubusercontent.com/neo4j-graphacademy/courses/refs/heads/main/asciidoc/courses/genai-workshop-graphrag/modules/2-neo4j-graphrag/lessons/4-hybrid-retriever/reset.cypher[Create full text index^].
-.. link:https://raw.githubusercontent.com/neo4j-graphacademy/courses/refs/heads/main/asciidoc/courses/genai-workshop-graphrag/modules/1-knowledge-graphs-vectors/lessons/5-create-vector-index/reset.cypher[Create poster embeddings and vector index^].
+.. link:https://raw.githubusercontent.com/neo4j-graphacademy/courses/refs/heads/main/asciidoc/courses/genai-workshop-graphrag/modules/2-neo4j-graphrag/lessons/7-multimodal-graphrag/reset.cypher[Create poster embeddings and vector index^].
 . Create a virtual environment and install the requirements.
 + 
 [source,sh]
@@ -26,6 +26,6 @@ pip install pytest
 . Run the tests
 +
 [source,sh]
-pytest 1-knowledge-graphs-vectors\solutions\
-pytest 2-neo4j-graphrag\solutions\
+pytest 1-knowledge-graphs-vectors/solutions
+pytest 2-neo4j-graphrag/solutions
 
